--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 <p>Electrical Engineer</p>
 
 
-<p class="view"><a href="https://github.com/almirbraggio">GitHub</a></p>
-<p class="view"><a href="https://almirbraggio.com">Website</a></p>
+<p class="view"><a href="https://almirbraggio.com">Website</a> - <a href="https://github.com/almirbraggio">GitHub</a>  - <a href="http://twitter.com/almirbraggio">Twitter</a></p>
 
 </header>
 <section>
@@ -26,17 +25,17 @@
 <h3>
 <a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my page</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+<p>Hi, my name is Almir Braggio. I am Electrical Engineer and I living in southern Brazil (Cascavel, Paraná, Brasil).</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="works" class="anchor" href="#works" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Last works</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>1. Hardware projects and design (Altium Designer)<br>2. Firmware developer(C and ASM)<br>3. Python programming<br>4. FPGA (Altera) hardware and VHDL programming</p>
 
 <h3>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Send me an e-mail or message. I'll be happy to read and answer.<br><code>almirbraggio(at)gmail(dot)com</code></p>
 </section>
 <footer>
 <p><small>Almir Braggio - 2016<br>Hosted on GitHub Pages</small></p>
