--- a/index.html
+++ b/index.html
@@ -1,47 +1,12 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="chrome=1">
-<title>Almir Braggio on Github</title>
-
-<link rel="stylesheet" href="stylesheets/styles.css">
-<link rel="stylesheet" href="stylesheets/github-light.css">
-<meta name="viewport" content="width=device-width">
-
-</head>
-<body>
-<div class="wrapper">
-<header>
-<h1>Almir Braggio</h1>
-<p>Electrical Engineer</p>
-
-
-<p class="view"><a href="https://almirbraggio.com">Website</a> - <a href="https://github.com/almirbraggio">GitHub</a>  - <a href="http://twitter.com/almirbraggio">Twitter</a></p>
-
-</header>
-<section>
-
-<h3>
-<a id="welcome" class="anchor" href="#welcome" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my page</h3>
-
-<p>Hi, my name is Almir Braggio. I am Electrical Engineer and I living in southern Brazil (Cascavel, Paraná, Brasil).</p>
-
-<h3>
-<a id="works" class="anchor" href="#works" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Last works</h3>
-
-<p>1. Hardware projects and design (Altium Designer)<br>2. Firmware developer(C and ASM)<br>3. Python programming<br>4. FPGA (Altera) hardware and VHDL programming</p>
-
-<h3>
-<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Contact</h3>
-
-<p>Send me an e-mail or message. I'll be happy to read and answer.<br><code>almirbraggio(at)gmail(dot)com</code></p>
-</section>
-<footer>
-<p><small>Almir Braggio - 2016<br>Hosted on GitHub Pages</small></p>
-</footer>
-</div>
-<script src="javascripts/scale.fix.js"></script>
-
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="chrome=1">
+		<title>Moved</title>
+		<meta http-equiv="refresh" content="3;url='http://almirbraggio.com'"/>
+	</head>
+	<body>
+		<p>This page has moved to <a href="http://almirbraggio.com/">http://almirbraggio.com/</a>. You will be redirected...</p>
+	</body>
 </html>
